--- a/themes/cactus/layout/_partial/scripts.ejs
+++ b/themes/cactus/layout/_partial/scripts.ejs
@@ -119,7 +119,8 @@
             var dsq = document.createElement('script');
             dsq.type = 'text/javascript';
             dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
+            // dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
+            dsq.src = '//www.biuaxia.cn/soource/js/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         }());
     </script>
