Fix embed.js 文件位置错误

--- a/themes/cactus/layout/_partial/scripts.ejs
+++ b/themes/cactus/layout/_partial/scripts.ejs
@@ -120,7 +120,7 @@
             dsq.type = 'text/javascript';
             dsq.async = true;
             // dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
-            dsq.src = '//www.biuaxia.cn/soource/js/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
+            dsq.src = '//www.biuaxia.cn/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         }());
     </script>
