--- a/themes/cactus/layout/_partial/footer.ejs
+++ b/themes/cactus/layout/_partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div class="footer-left">
-    <a href="http://www.beian.miit.gov.cn?utm_source=biuaxia.cn" title="蜀ICP备19024339号-1">蜀ICP备19024339号-1</a> & 
+    <a href="https://beian.miit.gov.cn?utm_source=biuaxia.cn" title="蜀ICP备19024339号-1">蜀ICP备19024339号-1</a> & 
     <%= __('footer.copyright') %> &copy;
     <% var endYear = (theme.copyright && theme.copyright.end_year) ? theme.copyright.end_year : new Date().getFullYear() %>
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
