--- a/themes/cactus/layout/_partial/footer.ejs
+++ b/themes/cactus/layout/_partial/footer.ejs
@@ -1,7 +1,7 @@
 <footer id="footer">
   <!-- [为您的网站添加MySSL安全认证签章](https://blog.myssl.com/myssl-seal/) -->
   <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
-    <a href="https://myssl.com/您的域名?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
+    <a href="https://myssl.com/www.biuaxia.cn?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
   </div>
   <div class="footer-left">
     <a href="https://beian.miit.gov.cn?utm_source=biuaxia.cn" title="蜀ICP备19024339号-1">蜀ICP备19024339号-1</a> & 
